# TrainingVersion_Transfercontract

./: README.md
codegen/: Cargo.toml
codegen/src/: lib.rs
common/: Cargo.toml
common/src/: address.rs  base.rs  context.rs  hash.rs  lib.rs  serialization.rs
pbc_external/: Cargo.toml
pbc_external/src/: lib.rs
rust-reflection/: .gitignore  Cargo.toml
rust-reflection/reflection/: Cargo.toml
rust-reflection/reflection/src/: lib.rs
rust-reflection/reflection_derive/: Cargo.toml
rust-reflection/reflection_derive/src/: lib.rs
rust-reflection/reflection_test/: Cargo.toml
rust-reflection/reflection_test/src/: lib.rs
token-contract/: Cargo.toml
token-contract/src/: lib.rs
